# s3-auto-upload

./: .gitignore  Cargo.toml
src/: main.rs
