[package]
name = "s3-auto-upload"
version = "0.1.0"
authors = ["Rens <hi@rensverschuren.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.2"
rust-s3 = "0.18.6"
mime_guess = "2.0.1"